--- a/Sensors.html
+++ b/Sensors.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<header class="top-bar">
-		<h1>WattDepot3 HTML API</h1>
+		<h1>WattDepot3 HTTP API</h1>
 	</header>
 	<div class="container">
 		<div class="row row-offcanvas row-offcanvas-left">
