Changed button style.

--- a/Locations.html
+++ b/Locations.html
@@ -44,7 +44,7 @@
 						</header>
 						<div class="card-info">
 							http://server.wattdepot.org/wattdepot/locations <a
-								class="btn
+								class="btn dropdown-toggle
 			     right"
 								onclick="$('#get_locations_response').slideToggle()"><b>Response</b></a>
 						</div>
@@ -85,7 +85,7 @@
                         </header>
                         <div class="card-info">
                             http://server.wattdepot.org/wattdepot/location/ilima-6th <a
-                                class="btn
+                                class="btn dropdown-toggle
                  right"
                                 onclick="$('#get_location_response').slideToggle()"><b>Response</b></a>
                         </div>
@@ -117,7 +117,7 @@
                         </header>
                         <div class="card-info">
                             curl -F '{"description":"Hale Aloha Ilima residence hall 6th floor","altitude":30,"longitude":-157.812727,"latitude":21.294642,"id":"loc1"}' http://server.wattdepot.org/wattdepot/location/ <a
-                                class="btn
+                                class="btn dropdown-toggle
                  right"
                                 onclick="$('#put_location_response').slideToggle()"><b>Response</b></a>
                         </div>
@@ -146,7 +146,7 @@
                         </header>
                         <div class="card-info">
                             curl -X DELETE http://server.wattdepot.org/wattdepot/location/ilima-6th <a
-                                class="btn
+                                class="btn dropdown-toggle
                  right"
                                 onclick="$('#del_location_response').slideToggle()"><b>Response</b></a>
                         </div>
