--- a/Sensors.html
+++ b/Sensors.html
@@ -44,7 +44,7 @@
 						</header>
 						<div class="card-info">
 							http://server.wattdepot.org/wattdepot/sensors <a
-								class="btn
+								class="btn dropdown-toggle
 			     right"
 								onclick="$('#get_sensors_response_long').slideToggle()"><b>Response</b></a>
 						</div>
@@ -99,7 +99,7 @@
 						</header>
 						<div class="card-info">
 							http://server.wattdepot.org/wattdepot/sensors <a
-								class="btn
+								class="btn dropdown-toggle
                  right"
 								onclick="$('#get_sensors_response').slideToggle()"><b>Response</b></a>
 						</div>
@@ -140,7 +140,7 @@
 						</header>
 						<div class="card-info">
 							http://server.wattdepot.org/wattdepot/sensor/ilima-6-telco <a
-								class="btn
+								class="btn dropdown-toggle
                  right"
 								onclick="$('#get_sensor_response').slideToggle()"><b>Response</b></a>
 						</div>
@@ -179,7 +179,7 @@
                         </header>
                         <div class="card-info">
                             http://server.wattdepot.org/wattdepot/sensor/ilima-6-telco?short=true <a
-                                class="btn
+                                class="btn dropdown-toggle
                  right"
                                 onclick="$('#get_sensor_response_short').slideToggle()"><b>Response</b></a>
                         </div>
@@ -212,7 +212,7 @@
 						<div class="card-info">
 							curl -F '{id: "sensor1", uri: "http://foo.com", location: "loc2",
 							model: "sm1", []}' http://server.wattdepot.org/wattdepot/sensor/
-							<a class="btn
+							<a class="btn dropdown-toggle
                  right"
 								onclick="$('#put_sensor_response').slideToggle()"><b>Response</b></a>
 						</div>
@@ -243,7 +243,7 @@
 						<div class="card-info">
 							curl -X DELETE
 							http://server.wattdepot.org/wattdepot/sensor/ilima-6th <a
-								class="btn
+								class="btn dropdown-toggle
                  right"
 								onclick="$('#del_sensor_response').slideToggle()"><b>Response</b></a>
 						</div>
