Changed button style again.

--- a/Sensors.html
+++ b/Sensors.html
@@ -46,7 +46,7 @@
 							http://server.wattdepot.org/wattdepot/sensors <a
 								class="btn dropdown-toggle
 			     right"
-								onclick="$('#get_sensors_response_long').slideToggle()"><b>Response</b></a>
+								onclick="$('#get_sensors_response_long').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="get_sensors_response_long"
 							display="none">
@@ -101,7 +101,7 @@
 							http://server.wattdepot.org/wattdepot/sensors <a
 								class="btn dropdown-toggle
                  right"
-								onclick="$('#get_sensors_response').slideToggle()"><b>Response</b></a>
+								onclick="$('#get_sensors_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="get_sensors_response"
 							display="none">
@@ -142,7 +142,7 @@
 							http://server.wattdepot.org/wattdepot/sensor/ilima-6-telco <a
 								class="btn dropdown-toggle
                  right"
-								onclick="$('#get_sensor_response').slideToggle()"><b>Response</b></a>
+								onclick="$('#get_sensor_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="get_sensor_response"
 							display="none">
@@ -181,7 +181,7 @@
                             http://server.wattdepot.org/wattdepot/sensor/ilima-6-telco?short=true <a
                                 class="btn dropdown-toggle
                  right"
-                                onclick="$('#get_sensor_response_short').slideToggle()"><b>Response</b></a>
+                                onclick="$('#get_sensor_response_short').slideToggle()"><b>Response <span class="caret"></span></b></a>
                         </div>
                         <div class="card-info-more" id="get_sensor_response_short"
                             display="none">
@@ -214,7 +214,7 @@
 							model: "sm1", []}' http://server.wattdepot.org/wattdepot/sensor/
 							<a class="btn dropdown-toggle
                  right"
-								onclick="$('#put_sensor_response').slideToggle()"><b>Response</b></a>
+								onclick="$('#put_sensor_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="put_sensor_response"
 							display="none">
@@ -245,7 +245,7 @@
 							http://server.wattdepot.org/wattdepot/sensor/ilima-6th <a
 								class="btn dropdown-toggle
                  right"
-								onclick="$('#del_sensor_response').slideToggle()"><b>Response</b></a>
+								onclick="$('#del_sensor_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="del_sensor_response"
 							display="none">
