--- a/Measurements.html
+++ b/Measurements.html
@@ -13,15 +13,15 @@
 </style>
 </head>
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<header class="top-bar">
-				<h2>
-					<span><img alt="WattDepot logo" src="wattdepot-logo.png">
-						WattDepot3 HTML API: Sensors</span>
-				</h2>
-			</header>
-		</div>
+    <div class="container">
+        <div class="jumbotron">
+            <header class="top-bar">
+                <h2>
+                    <span><img alt="WattDepot logo" src="wattdepot-logo.png">
+                        WattDepot3 HTML API: Sensors</span>
+                </h2>
+            </header>
+        </div>
 		<div class="row row-offcanvas row-offcanvas-left">
 			<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar"
 				role="navigation">
@@ -29,11 +29,11 @@
 					<ul class="nav nav-pills nav-stacked">
 						<li><a href="HtmlApi.html">Home</a></li>
 						<li><a href="Locations.html">Locations</a>
-						<li class="active"><a href="Sensors.html">Sensors</a>
+						<li><a href="Sensors.html">Sensors</a>
 						<li><a href="SensorModels.html">Sensor Models</a>
 						<li><a href="SensorGroups.html">Sensor Groups</a>
 						<li><a href="WattDepositories.html">WattDepositories</a></li>
-						<li><a href="Measurements.html">Measurements</a></li>
+						<li class="active"><a href="Measurements.html">Measurements</a></li>
 					</ul>
 				</div>
 			</div>
@@ -50,9 +50,7 @@
 							http://server.wattdepot.org/wattdepot/sensors <a
 								class="btn dropdown-toggle
 			     right"
-								onclick="$('#get_sensors_response_long').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
+								onclick="$('#get_sensors_response_long').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="get_sensors_response_long"
 							display="none">
@@ -70,13 +68,7 @@
                <span>&quot;latitude&quot;</span><span>:</span> <span>21.294642,</span>
                <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6th&quot;</span>
             <span class="p">},</span>
-      <span>&quot;model&quot;</span><span>:</span>
-            <span>{</span>
-               <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1.0&quot;,</span>
-               <span>&quot;protocol&quot;</span><span>:</span> <span>&quot;eGauge&quot;,</span>
-               <span>&quot;type&quot;</span><span>:</span> <span>&quot;EGAUGE&quot;,</span>
-               <span>&quot;version&quot;</span><span>:</span> <span>&quot;1.0&quot;</span>
-            <span>},</span>
+      <span>&quot;model&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
       <span>[]</span>
    <span class="p">},</span>
    <span>{</span>
@@ -90,13 +82,7 @@
                <span>&quot;latitude&quot;</span><span>:</span> <span>21.294642,</span>
                <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6th&quot;</span>
             <span class="p">},</span>      
-      <span>&quot;model&quot;</span><span>:</span>
-            <span>{</span>
-               <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1.0&quot;,</span>
-               <span>&quot;protocol&quot;</span><span>:</span> <span>&quot;eGauge&quot;,</span>
-               <span>&quot;type&quot;</span><span>:</span> <span>&quot;EGAUGE&quot;,</span>
-               <span>&quot;version&quot;</span><span>:</span> <span>&quot;1.0&quot;</span>
-            <span>},</span>
+      <span>&quot;model&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
       <span>[]</span>
    <span class="p">}</span>
 <span class="p">]</span>
@@ -119,9 +105,7 @@
 							http://server.wattdepot.org/wattdepot/sensors <a
 								class="btn dropdown-toggle
                  right"
-								onclick="$('#get_sensors_response').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
+								onclick="$('#get_sensors_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="get_sensors_response"
 							display="none">
@@ -132,14 +116,14 @@
       <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6-telco&quot;,</span>
       <span>&quot;uri&quot;</span><span>:</span> <span>&quot;http://foo.com/ilima-6-telco&quot;,</span>
       <span>&quot;locationId&quot;</span><span>:</span> <span>&quot;ilima-6th&quot;,</span>
-      <span>&quot;modelId&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
+      <span>&quot;model&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
       <span>[]</span>
    <span class="p">},</span>
    <span>{</span>
       <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6-elect&quot;,</span>
       <span>&quot;uri&quot;</span><span>:</span> <span>&quot;http://foo.com/ilima-6-elect&quot;,</span>
       <span>&quot;locationId&quot;</span><span>:</span> <span>&quot;ilima-6th&quot;,</span>
-      <span>&quot;modelId&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
+      <span>&quot;model&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
       <span>[]</span>
    <span class="p">}</span>
 <span class="p">]</span>
@@ -162,9 +146,7 @@
 							http://server.wattdepot.org/wattdepot/sensor/ilima-6-telco <a
 								class="btn dropdown-toggle
                  right"
-								onclick="$('#get_sensor_response').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
+								onclick="$('#get_sensor_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="get_sensor_response"
 							display="none">
@@ -173,21 +155,15 @@
 <span>{</span>
    <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6-telco&quot;,</span>
    <span>&quot;uri&quot;</span><span>:</span> <span>&quot;http://foo.com/ilima-6-telco&quot;,</span>
-   <span>&quot;location&quot;</span><span>:</span>
-        <span>{</span>
-            <span>&quot;description&quot;</span><span>:</span> <span>&quot;Hale Aloha Ilima residence hall 6th floor&quot;,</span>
-            <span>&quot;altitude&quot;</span><span>:</span> <span>30,</span>
-            <span>&quot;longitude&quot;</span><span>:</span> <span>-157.812727,</span>
-            <span>&quot;latitude&quot;</span><span>:</span> <span>21.294642,</span>
-            <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6th&quot;</span>
-         <span class="p">},</span>      
-   <span>&quot;model&quot;</span><span>:</span>
-         <span>{</span>
-            <span>&quot;id&quot;</span><span>:</span> <span>&quot;egauge1.0&quot;,</span>
-            <span>&quot;protocol&quot;</span><span>:</span> <span>&quot;eGauge&quot;,</span>
-            <span>&quot;type&quot;</span><span>:</span> <span>&quot;EGAUGE&quot;,</span>
-            <span>&quot;version&quot;</span><span>:</span> <span>&quot;1.0&quot;</span>
-         <span>},</span>
+   <span>&quot;locationId&quot;</span><span>:</span>
+            <span>{</span>
+               <span>&quot;description&quot;</span><span>:</span> <span>&quot;Hale Aloha Ilima residence hall 6th floor&quot;,</span>
+               <span>&quot;altitude&quot;</span><span>:</span> <span>30,</span>
+               <span>&quot;longitude&quot;</span><span>:</span> <span>-157.812727,</span>
+               <span>&quot;latitude&quot;</span><span>:</span> <span>21.294642,</span>
+               <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6th&quot;</span>
+            <span class="p">},</span>      
+   <span>&quot;model&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
    <span>[]</span>
 <span class="p">}</span>
               </code>
@@ -198,40 +174,38 @@
 						</div>
 					</section>
 				</div>
-				<div class="card">
-					<section id="get_sensor_short">
-						<header>
-							<h2>
-								<span class="big-type">GET</span> /wattdepot/sensor/<span>{sensor_id}?short=true</span>
-							</h2>
-						</header>
-						<div class="card-info">
-							http://server.wattdepot.org/wattdepot/sensor/ilima-6-telco?short=true
-							<a class="btn dropdown-toggle
+                <div class="card">
+                    <section id="get_sensor_short">
+                        <header>
+                            <h2>
+                                <span class="big-type">GET</span> /wattdepot/sensor/<span>{sensor_id}?short=true</span>
+                            </h2>
+                        </header>
+                        <div class="card-info">
+                            http://server.wattdepot.org/wattdepot/sensor/ilima-6-telco?short=true <a
+                                class="btn dropdown-toggle
                  right"
-								onclick="$('#get_sensor_response_short').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
-						</div>
-						<div class="card-info-more" id="get_sensor_response_short"
-							display="none">
-							<pre>
+                                onclick="$('#get_sensor_response_short').slideToggle()"><b>Response <span class="caret"></span></b></a>
+                        </div>
+                        <div class="card-info-more" id="get_sensor_response_short"
+                            display="none">
+                            <pre>
               <code>
 <span>{</span>
    <span>&quot;id&quot;</span><span>:</span> <span>&quot;ilima-6-telco&quot;,</span>
    <span>&quot;uri&quot;</span><span>:</span> <span>&quot;http://foo.com/ilima-6-telco&quot;,</span>
    <span>&quot;locationId&quot;</span><span>:</span> <span>&quot;ilima-6th&quot;,</span>
-   <span>&quot;modelId&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
+   <span>&quot;model&quot;</span><span>:</span> <span>&quot;eguage1.0&quot;,</span>
    <span>[]</span>
 <span class="p">}</span>
               </code>
             </pre>
-						</div>
-						<div class="card-description">
-							<p>Get the Sensor with the given sensor_id.</p>
-						</div>
-					</section>
-				</div>
+                        </div>
+                        <div class="card-description">
+                            <p>Get the Sensor with the given sensor_id.</p>
+                        </div>
+                    </section>
+                </div>
 				<div class="card">
 					<section id="post_sensor">
 						<header>
@@ -240,16 +214,11 @@
 							</h2>
 						</header>
 						<div class="card-info">
-							curl -F '{"id": "sensor1", "uri" "http://foo.com", "location": {id
-							:"loc2", "latitude": 21.294642, "longitude": -157.812727,
-							"altitude": 40.0, "description": "40.0"}, "model": {id :"sm1",
-							"protocol": "Hammer", "type": "hammer", "version": "1.0"}, []}'
-							http://server.wattdepot.org/wattdepot/sensor/ <a
-								class="btn dropdown-toggle
+							curl -F '{id: "sensor1", uri: "http://foo.com", location: "loc2",
+							model: "sm1", []}' http://server.wattdepot.org/wattdepot/sensor/
+							<a class="btn dropdown-toggle
                  right"
-								onclick="$('#put_sensor_response').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
+								onclick="$('#put_sensor_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="put_sensor_response"
 							display="none">
@@ -280,9 +249,7 @@
 							http://server.wattdepot.org/wattdepot/sensor/ilima-6th <a
 								class="btn dropdown-toggle
                  right"
-								onclick="$('#del_sensor_response').slideToggle()"><b>Response
-									<span class="caret"></span>
-							</b></a>
+								onclick="$('#del_sensor_response').slideToggle()"><b>Response <span class="caret"></span></b></a>
 						</div>
 						<div class="card-info-more" id="del_sensor_response"
 							display="none">
