--- a/src/main/java/org/wattdepot/server/datamodel/package.html
+++ b/src/main/java/org/wattdepot/server/datamodel/package.html
@@ -1,3 +1,3 @@
 <body>
-Provides classes relevant to any WattDepot data model.
+Provides classes relevant to any WattDepot data model. Defines the 
 </body>
